Took away delta dogs, added new description for other events

--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                 <p>Each house will be tasked with finding a Delta Sig around campus and recording themselves or their friends shooting their target. These videos must be sent to the Delta Sigma Phi Instagram account before 6 PM. The house with the most amount of assassinations will be awarded points.
                 </p>
             </div>
-            <div class="grid-card">
+            <!-- <div class="grid-card">
                 <img src="assets/10:28.png" alt="">
                 <h4>D-Siglympics</h4>
                 <p>The captivating, the thrilling, and the event you’ve all been waiting for… D-SIGLYMPICS! The D-Siglympics will be a series of events in which all houses will compete against each other in water balloon dodgeball, tug of war, and last but not least a rice bag relay race. While these events occur the brothers of DSP will be seated waiting to get pied in the face. The winner of the D-Siglympic events will be awarded points. 
                 </p>
-            </div>
+            </div> -->
             <div class="grid-card">
                 <img src="assets/10:29.png" alt="">
                 <h4>Saul’s Skateboards</h4>
@@ -92,11 +92,9 @@
             <div class="grid-card">
                 <img src="assets/10:30.png" alt="">
                 <h4>Delta Dogs</h4>
-                <p>In partnership with the Humane Society Silicon Valley, we will be hosting an event for the houses to get involved and see firsthand how their donations will benefit. Puppies and Dogs will be attending this event at the chapter house and will be open to petting and cuddling for all participants for only $3. Houses can purchase bags of dog treats as well for $2. Along with this the team captain of each house and a team of her choosing will be tasked to create a dog treat for the brothers of Delta Sigma Phi using human ingredients. The best-tasting dog treat will win points.
+                <p>In partnership with the Humane Society Silicon Valley, we will be hosting an event for the houses to get involved and see firsthand how their donations will benefit. Puppies and Dogs will attend this event at the chapter house and will be open to petting and cuddling for all participants. The admission fee for this event will be $3. Houses can also come to a photo booth to get a photo shoot with a puppy in their laps for only $2. Along with this the team captain of each house and a team of her choosing will be tasked to create a dog treat for the brothers of Delta Sigma Phi using human ingredients provided during the event.. The best-tasting dog treat will win points. Dollars for points will be 1.5x during this event.
                 </p>
             </div>
-        </div>
-        <div class="final-two">
             <div class="grid-card">
                 <img src="assets/11:1.png" alt="">
                 <h4>Saul’s Best Dance Crew: The Showcase</h4>
@@ -104,6 +102,14 @@
                 </p>
             </div>
         </div>
+        <!-- <div class="final-two">
+            <div class="grid-card">
+                <img src="assets/11:1.png" alt="">
+                <h4>Saul’s Best Dance Crew: The Showcase</h4>
+                <p>The Final event, the culminating night, is the time to show why your house is the most talented, the most athletically gifted, and truly deserving of holding the title of Saul’s Best Dance Crew!
+                </p>
+            </div>
+        </div> -->
     </section>
     <section id="standings" class="standings">
         <div class="section-title">
