fixed venmo description

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                 </div>
                 <a href="https://venmo.com/u/SBDCforHSSV" target="_blank" class="venmo-link">@SBDCforHSSV <i class="fa-solid fa-square-arrow-up-right"></i></a>
             </div>
+            <p>*Include your full name and house name*</p>
         </div>
     </section>
     <section id="events" class="events">
